--- a/my-app-server/pom.xml
+++ b/my-app-server/pom.xml
@@ -34,6 +34,12 @@
             <artifactId>plugin-event-queue</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+        </dependency>
     </dependencies>
 
 </project>
